links to other pages, icons folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
+    <a href="./schedule.html">schedule page</a>
+    <a href="./side_effects.html">side effects page</a>
     <main>Starting out</main>
 </body>
 </html>
