--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="homepage.css">
     <title>Home</title>
 </head>
 <body>
+    <header>This is the header.</header>
     <main>Starting out</main>
 </body>
 </html>
