--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 
 <body>
-    <a href="./schedule.html">schedule page</a>
-    <a href="./side_effects.html">side effects page</a>
-    <header>This is the header.</header>
+    <header>
+        <ul>
+            <li><a href="./index.html"><img src="./images/icons/home.svg" alt="Home" width = "35" height = "35"></a></li>
+            <li><a href="./side_effects.html"><img src="./images/icons/pill.svg" alt="Medications" width = "35" height = "35"></a></li>
+            <li><a href="./schedule.html"><img src="./images/icons/clock.svg" alt="Clock" width = "35" height = "35"></a></li>
+            <li><a href="tel:+15025541822"><img src="images/icons/heart.svg" alt="Doctor" height = "35" width = "35"></a></li>
+        </ul>
+    </header>
+    
     <main>Starting out</main>
 </body>
 
