Updated header & added to all pages, added sample json for user input

--- a/schedule.html
+++ b/schedule.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="schedule.css">
     <title>Schedule</title>
 </head>
 
 <body>
-    <img src="./images/icons/clock.svg" />
+    <header>
+        <table class="headTable">
+            <tr>
+                <td><a href="./index.html"><img src="./images/icons/home.svg" alt="Home" width = "35" height = "35"></a></td>
+                <td><a href="./side_effects.html"><img src="./images/icons/pill.svg" alt="Medications" width = "35" height = "35"></a></td>
+                <td><a href="./schedule.html"><img src="./images/icons/clock.svg" alt="Clock" width = "35" height = "35"></a></td>
+                <td class="callDoc"><a href="tel:+15025541822"><img src="images/icons/heart.svg" alt="Doctor" height = "35" width = "35"></a></td>
+            </tr>
+        </table>
+    </header>
 </body>
 
 </html>
