--- a/side_effects.html
+++ b/side_effects.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="side_effects.css">
     <title>Side Effects</title>
 </head>
 <body>
-    
+    <header>
+        <table class="headTable">
+            <tr>
+                <td><a href="./index.html"><img src="./images/icons/home.svg" alt="Home" width = "35" height = "35"></a></td>
+                <td><a href="./side_effects.html"><img src="./images/icons/pill.svg" alt="Medications" width = "35" height = "35"></a></td>
+                <td><a href="./schedule.html"><img src="./images/icons/clock.svg" alt="Clock" width = "35" height = "35"></a></td>
+                <td class="callDoc"><a href="tel:+15025541822"><img src="images/icons/heart.svg" alt="Doctor" height = "35" width = "35"></a></td>
+            </tr>
+        </table>
+    </header>
 </body>
 </html>
