--- a/test.html
+++ b/test.html
@@ -35,13 +35,11 @@
 
 <!-- Search input -->
 <!-- <input type="text" id="searchInput" onkeyup="filterOptions()" placeholder="Search for options.."> -->
-<input type="text" id="searchInput" onclick="toggleDropdown()" onkeyup="filterOptions()"" placeholder="Search for options..">
+<input type="text" id="searchInput" onkeyup="filterOptions()"" placeholder="Search for options..">
 
 <!-- Dropdown menu -->
-<div id="myDropdown">
-  <div onclick="selectOption(this)">Drug 1</div>
-  <div onclick="selectOption(this)">Drug 2</div>
-</div>
+<select id="myDropdown">
+</select>
 
 <script>
 
@@ -79,15 +77,25 @@ function createList(items) {
     return list; // Return the created list
 }
 
-// Call the function to fetch data and create the list
 fetchDataAndCreateList()
     .then((list) => {
-        // Append the list to a container in the DOM
-        document.body.appendChild(list);
-    })
-    .catch(error => {
-        // Handle errors
+        console.log("is list an array? ", typeof list)
+        const dropdownContainer = document.getElementById("myDropdown");
+
+        const liElements = list.querySelectorAll('li');
+        liElements.forEach(li => {
+            // Create an option element for each item
+            const option = document.createElement('option');
+
+            // Set the text of the option to the item
+            option.textContent = li.textContent;
+            option.value = li.textContent;
+            // Append the option to the dropdown
+            dropdownContainer.appendChild(option);
+        })
+
     });
+
 
 
 function toggleDropdown() {
