created schedule page formatting & css

--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="schedule.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Schedule</title>
 </head>
 
@@ -19,6 +22,27 @@
             </tr>
         </table>
     </header>
+    <main>
+        <div class="container">
+            <ol class="timeList">
+                <li> 
+                    <h3> 7:00 AM </h3>
+                    <ul class="instructionList">
+                        <li> Take Ibuprofen (1 pill @ 25mg) with water </li>
+                        <li> Take [Medication.name] ([Medication.quantity] @ [Medication.dosage]) [Medication.route] [Medication.method] </li>
+                    </ul> 
+
+                </li>
+                <li> 
+                    <h3> format([START_TIME + FREQUENCY]) </h3> 
+                    <ul class="instructionList">
+                        <li> Take Ibuprofen (1 pill @ 25mg) orally with water </li>
+                        <li> Take [Medication.name] ([Medication.quantity] @ [Medication.dosage]) [Medication.route] [Medication.method] </li>
+                    </ul> 
+                </li>
+            </ol>
+        </div>
+    </main>
 </body>
 
 </html>
