--- a/side_effects.html
+++ b/side_effects.html
@@ -20,5 +20,27 @@
             </tr>
         </table>
     </header>
+    <main>
+        <div class="container">
+            <table class="effectTable">
+                <tr>
+                    <td width="50%"><h3> Side Effect </h3></td>
+                    <td width="50%"><h3> Potential Sources </h3></td>
+                </tr>
+                <tr>
+                    <td width="50%"> Nausea </td>
+                    <td width="50%"> Aspirin, Tylenol </td>
+                </tr>
+                <tr>
+                    <td width="50%"> Vomiting </td>
+                    <td width="50%"> Ibuprofen </td>
+                </tr>
+                <tr>
+                    <td width="50%"> [Medication.adverse_effect] </td>
+                    <td width="50%"> [Medication.name] * x </td>
+                </tr>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
