starting to implement fetch for side effects on test data

--- a/side_effects.html
+++ b/side_effects.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="side_effects.js" defer></script>
     <title>Side Effects</title>
 </head>
 <body>
@@ -22,22 +23,10 @@
     </header>
     <main>
         <div class="container">
-            <table class="effectTable">
+            <table class="effectTable" id="effectsTable">
                 <tr>
                     <td width="50%"><h3> Side Effect </h3></td>
                     <td width="50%"><h3> Potential Sources </h3></td>
-                </tr>
-                <tr>
-                    <td width="50%"> Nausea </td>
-                    <td width="50%"> Aspirin, Tylenol </td>
-                </tr>
-                <tr>
-                    <td width="50%"> Vomiting </td>
-                    <td width="50%"> Ibuprofen </td>
-                </tr>
-                <tr>
-                    <td width="50%"> [Medication.adverse_effect] </td>
-                    <td width="50%"> [Medication.name] * x </td>
                 </tr>
             </table>
         </div>
