--- a/side_effects.html
+++ b/side_effects.html
@@ -24,7 +24,7 @@
     <main>
         <div class="container">
             <table class="effectTable" id="effectsTable">
-                <tr>
+                <tr style="border-bottom: 1px solid black">
                     <td width="50%"><h3> Side Effect </h3></td>
                     <td width="50%"><h3> Potential Sources </h3></td>
                 </tr>
