Fixed aesthetics for the medication list.

--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
         </form>
         <br>
         </div>
-        <h2 class="medicationHeader">Medication List:</h2>
-        <div class="medListAdder" style = "width: 100%;height: 350px;" class="medicationList" id="listContainer" onload="update()">
+        <h2 class="medicationHeader">Medication List</h2>
+        <div class="medListAdder" style = "width: 100%;" class="medicationList" id="listContainer" onload="update()">
         
         </div>
         </div>
-        <button id="myBtn">+</button>
+        <button id="myBtn" style = "margin: 1rem; width: 50px; font-size: 1.5rem; ;">+</button>
     </main>
 </body>
 
