added empty message when no perscriptions are entered

--- a/schedule.html
+++ b/schedule.html
@@ -24,6 +24,7 @@
         </table>
     </header>
     <main>
+        <div style="width:100%; text-align: center;"><h1 id="empty" style="margin-left: 8px; margin-right: 8px;"></h1></div>
         <div class="container">
             <ol class="timeList" id="timeList">
             </ol>
