--- a/side_effects.html
+++ b/side_effects.html
@@ -22,13 +22,8 @@
         </table>
     </header>
     <main>
-        <div class="container">
-            <table class="effectTable" id="effectsTable">
-                <tr style="border-bottom: 1px solid black">
-                    <td width="50%"><h3> Side Effect </h3></td>
-                    <td width="50%"><h3> Potential Sources </h3></td>
-                </tr>
-            </table>
+        <div style="width:100%; text-align: center;"><h1 id="empty" style="margin-left: 8px; margin-right: 8px;"></h1></div>
+        <div class="container" id="container">
         </div>
     </main>
 </body>
