--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
                 <!-- Modal content -->
                 <h1 class="modalHeader">Prescription Information</h1>
                 <form id="medication-form" class="form">
-                    <span>
-                        <label for="medicationInput">Medication Name:</label>
-                        <input type="text" id="medicationInput" placeholder="Ibuprofen"><br>
-                    </span>
+                    <label for="medicationInput">Choose Medication:</label>
+                    <select class = "dropdown" id ="medicationInput"> 
+                        <!-- s<label for="medicationInput">Medication Name:</label> -->
+                        <!-- <input type="text" id="medicationInput" placeholder="Ibuprofen"><br> -->
+                    </select>
 
                     <span>
                         <label for="dosageInput">Dosage:</label>
