--- a/index.html
+++ b/index.html
@@ -41,21 +41,16 @@
                         <!-- s<label for="medicationInput">Medication Name:</label> -->
                         <!-- <input type="text" id="medicationInput" placeholder="Ibuprofen"><br> -->
                     </select>
-
                     <span>
                         <label for="dosageInput">Dosage:</label>
                         <input type="text" id="dosageInput" placeholder="50mg"><br>
                     </span>
 
-                    <span>
-                        <label for="quantityInput">Quantity:</label>
-                        <input type="text" id="quantityInput" placeholder="3"><br>
-                    </span>
-
-
-                    <span>
-                        <label for="frequencyInput">Frequency:</label>
-                        <input type="text" id="frequencyInput" placeholder="2"><br>
+                    <span class = "inLine">
+                        <input class = "abnormalInput" type="text" id="quantityInput" placeholder="3">
+                        <label for="quantityInput">pill(s) every </label>
+                        <input class = "abnormalInput" type="text" id="frequencyInput" placeholder="2">
+                        <label for="frequencyInput">hours.</label>
                     </span>
 
                     <span>
