added manifest and service worker for PWA testing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
+    <link rel="canonical" href="https://jwsmoroske.github.io/Cathacks-X-Project/">
     <link rel="stylesheet" href="homepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +40,6 @@
                 <form id="medication-form" class="form">
                     <label for="medicationInput">Choose Medication:</label>
                     <select class = "dropdown" id ="medicationInput"> 
-                        <!-- s<label for="medicationInput">Medication Name:</label> -->
-                        <!-- <input type="text" id="medicationInput" placeholder="Ibuprofen"><br> -->
                     </select>
 
                     <span>
