--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
         </div>
         <button id="myBtn" style = "margin: 1rem; width: 50px; font-size: 1.5rem; ;">+</button>
     </main>
+    <script>
+        if('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/sw.js', { scope: '/' });
+        }
+    </script>
 </body>
 
 </html>
