service worker test v2.3

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </main>
     <script>
         if('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/sw.js', { scope: '/' });
+          navigator.serviceWorker.register('/sw.js', { scope: '/Cathacks-X-Project/' });
         }
     </script>
 </body>
